# crunch_uml

./: .flake8  .gitignore  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README-save.md  README.md  SchuldenXMI_output.md  coverage.lcov  crunch_uml (Exemplaar met conflict van Arjen Brienen 2024-07-17).db-journal  crunch_uml (Exemplaar met conflict van Arjen Brienen 2024-12-27).db-journal  crunch_uml.code-workspace  crunch_uml.db-journal  dev_requirements.txt  index.html  json_schema_Schuldhulptraject.json  mkdocs.yml  mypy.ini  pyproject.toml  pyproject.toml.save  pytest.ini  requirements.txt  setup.py  sitemap.xml  test_Model Monumenten.py  test_Model Onderwijs.py  xmi_data.db
.github/workflows/: build.yml  release.yml
crunch_uml/: __init__.py  cli.py  const.py  db.py  ea_geometry.py  excpetions.py  lang.py  ollama_translator.py  registry.py  schema.py  util.py
crunch_uml/parsers/: eaxmiparser.py  jsonparser.py  multiple_parsers.py  parser.py  qeaparser.py  xlsxparser.py  xmiparser.py
crunch_uml/renderers/: EA_QUIRKS.md  earepoupdater.py  jinja2renderer.py  lodrenderer copy.py  lodrenderer.py  pandasrenderer.py  renderer.py  (+3 more)
diagrammen/: 01_architectuur.drawio  01_architectuur_en.drawio
docs/: index.en.md  index.md  voorbeelden.en.md  voorbeelden.md
en/: index.html
handleiding/: index.html
recipes/: translate.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
tasks/: diagram-geometry-support.md
technisch/: index.html
test/: schema_Uitwisselmodel.json
tools/: benchmark_translation_models.py
voorbeelden/: index.html
(+270 files in other folders)
