[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
preview = true
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
skip = ["cli.py"]

[tool.mypy]
files = ["crunch_uml", "tests"]
exclude = "^(site-packages|\\.venv)/"
